--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -16,6 +16,7 @@
     <!-- General Scripts -->
     <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
     <script src="/javascripts/lib/jquery.js"></script> <!-- ##### script path was wrong : fixed -->
+    <script src="/javascripts/lib/bootstrap.min.js"></script> <!-- ##### script path was wrong : fixed -->
     <script src="/javascripts/main.js"></script>
 </head>
 <body>
